--- a/biostatistics.html
+++ b/biostatistics.html
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n95qPKwI'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=obqM9fwg&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n95qPKwI'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -205,7 +205,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-29940'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-29940'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -219,7 +219,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/biostatistician-mechelenbe-2'>
+<h5><a href='https://glpg.recruitee.com/o/biostatistician-mechelenbe-2'>
       Biostatistician - Mechelen,BE - Galapagos
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -237,7 +237,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-02</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-ii-3125'>Biostatistician II - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-ii-3125'>Biostatistician II - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Bengaluru, India</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -257,7 +257,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29861'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-29861'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -289,7 +289,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-2902'>Biostatistician - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-2902'>Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-18</p>
 <hr/>
@@ -298,7 +298,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p>Jun 9, 2019 ... FACT - Farmington, Connecticut is now hiring a Biostatistician II in Farmington, 
 Connecticut. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/6344B60714'>Statistics &amp; Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/6344B60714'>Statistics &amp; Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Massachusetts, United States</span></p>
 <p>Posted on: 2019-06-15</p>
 <hr/>
@@ -422,7 +422,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light">Pennsylvania, United States</span></p>
 <p>Posted on: 2019-06-01</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistics-team-leader-2598'>Biostatistics Team Leader - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistics-team-leader-2598'>Biostatistics Team Leader - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-05-30</p>
 <hr/>
@@ -434,7 +434,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-24</p>
 <hr/>
-<h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-statistical-analyst-biostatistics-20080'>Research Statistical Analyst - Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mdanderson.referrals.selectminds.com/jobs/research-statistical-analyst-biostatistics-20080'>Research Statistical Analyst - Biostatistics - MD Anderson Cancer Center Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-24</p>
 <hr/>
@@ -452,11 +452,11 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-work-from-home-2446'>Principal Biostatistician- work from home! - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-work-from-home-2446'>Principal Biostatistician- work from home! - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-05-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-biostatistician-hamilton-nj-8k-sign-on-bonus-2449'>Sr Biostatistician- Hamilton, NJ! 8K sign-on bonus - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-biostatistician-hamilton-nj-8k-sign-on-bonus-2449'>Sr Biostatistician- Hamilton, NJ! 8K sign-on bonus - PPD Careers</a></h5> 
 <p><span class="badge badge-light">New Jersey, United States</span></p>
 <p>Posted on: 2019-05-21</p>
 <hr/>
